--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.12",
-    "@angular/cdk": "^15.2.9",
+    "@angular/cdk": "^16.2.12",
     "@angular/common": "^16.2.12",
     "@angular/compiler": "^16.2.12",
     "@angular/core": "^16.2.12",
     "@angular/forms": "^16.2.12",
-    "@angular/material": "^15.2.9",
+    "@angular/material": "^16.0.0",
     "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
+    "hammerjs": "^2.0.8",
+    "ng-gallery": "^11.0.0",
+    "ngx-lightbox": "^3.0.0",
     "rxjs": "~7.5.0",
+    "swiper": "^11.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.3"
   },
