--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/compiler": "^16.2.12",
     "@angular/core": "^16.2.12",
     "@angular/forms": "^16.2.12",
-    "@angular/material": "^16.0.0",
+    "@angular/material": "^16.2.12",
     "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
@@ -32,6 +32,7 @@
     "@angular-devkit/build-angular": "^16.2.10",
     "@angular/cli": "~16.2.10",
     "@angular/compiler-cli": "^16.2.12",
+    "@types/hammerjs": "^2.0.45",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
