--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.7.1",
     "ng-gallery": "^11.0.0",
     "ngx-lightbox": "^3.0.0",
+    "ngx-owl-carousel-o": "^16.0.0",
     "rxjs": "~7.5.0",
     "swiper": "^11.0.5",
     "tslib": "^2.3.0",
